--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
 
+<h2> Your Name - Certification Exam Prep </h2>
+  <h1> Domain 1 </h1>
+  <ul>
+    <li> Script and noscript: <a href="11a-scripts.html"> Link </a></li>
+    <li> Meta Tags:  <a href="11c-scripts.html"> Link </a></li>
+  </ul>
+ 
+</body>
+</html>
