--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h2> Your Name - Certification Exam Prep </h2>
+<h2> Elisha Ikhlaus - Certification Exam Prep! </h2>
   <h1> Domain 1 </h1>
   <ul>
     <li> Script and noscript: <a href="11a-scripts.html"> Link </a></li>
